# agentic-rag-langgraph

./: .env.example  .gitignore  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  infographic.html  main.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/text_files/: sample_rag_overview.txt
src/: config.py
src/graph/: nodes.py  state.py  workflow.py
src/ingestion/: loader.py
src/memory/: conversation.py
src/retrieval/: bm25_retriever.py  hybrid_search.py  reranker.py  vector_store.py
tests/: test_bm25.py  test_config.py
